--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "json-serve": "^0.1.0",
     "json-server": "^0.17.3"
   },
   "scripts": {
-    "start": "json-server -p 3006 -w db.json "
+    "start": "node index.js "
   }
 }
